k8s/asgard/apps/netbox/namespace.yaml
# k8s/asgard/apps/netbox/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbox
